# techtree

./: .clinerules  .gitignore  .pre-commit-config.yaml  PRD.md  README.md  add_lesson_state_column.py  app.py  delete_lesson_11.py  demo.py  find_lesson_pk.py  kill_servers.ps1  kill_servers.py  kill_servers.sh  migrate_add_lesson_id_to_progress.py  migrate_db_filename.py  migrate_syllabus.py  migrate_to_sqlite.py  pyproject.toml  requirements.txt  reset_password.py  sqlite_migration_plan.md  start.sh  start_be.sh  start_fe.sh  syllabus_db.json  syllabus_demo.py  syllabus_implementation_plan.md  techtree.db  techtree.db-shm  techtree.db-wal  techtree_db.json  temp_query.py  test_sqlite_db.py  test_syllabus_db.py  update_db_schema.py
ai/: __init__.py  langgraph_app.py
backend/: dependencies.py  exceptions.py  logger.py  main.py  models.py  system_prompt.txt
backend/ai/: __init__.py  app.py  llm_utils.py  prompt_formatting.py  prompt_loader.py
backend/ai/lessons/: langgraph_app.py  lessons_graph.py  nodes.py
backend/ai/lessons/prompts/: chat_response.prompt  evaluate_answer.prompt  generate_assessment.prompt  generate_exercises.prompt  generate_lesson_content.prompt  intent_classification.prompt
backend/ai/onboarding/: onboarding_graph.py  prompts.py
backend/ai/syllabus/: config.py  langgraph_app.py  nodes.py  state.py  syllabus_graph.py  utils.py
backend/routers/: __init__.py  auth_router.py  lesson_router.py  onboarding_router.py  progress_router.py  syllabus_router.py
backend/services/: auth_service.py  db.py  lesson_exposition_service.py  lesson_interaction_service.py  lesson_service.py  lesson_state_utils.py  onboarding_service.py  schema.sql  sqlite_db.py  syllabus_service.py
backend/tests/: conftest.py
backend/tests/ai/: __init__.py
backend/tests/ai/lessons/: __init__.py  test_lessons_graph.py  test_lessons_graph_nodes.py  test_lessons_graph_routing.py  test_node_chat.py  test_node_evaluate.py  test_node_generate_assessment.py  test_node_generate_exercise.py
backend/tests/ai/onboarding/: test_onboarding_graph.py
backend/tests/routers/: test_lesson_router.py
demos/: demo.py  lesson_demo.py  syllabus_demo.py
demos/lessons/: __init__.py
demos/lessons/streamlit_app/: __init__.py
docs/: NO_AUTH_implementation_plan.md  PRD-elixir.md  PRD_update_plan.md  chat_interface_plan.md  conversation_history_refactor_plan.md  db_schema.md  lesson_implementation_plan.md  lesson_service_refactor_plan.md  lessons_graph_refactor_plan.md  on_demand_exercises_plan.md  pydantic_generated_content_plan.md  streamlit_conversion_plan.md  syllabus_graph_refactor_plan.md  syllabus_uid_implementation_plan.md  syllabus_uid_test_plan.md  unified_app_plan.md
elixir/: .gitignore  README.md  mix.exs
elixir/assets/: tailwind.config.js
elixir/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/lib/: tech_tree.ex  tech_tree_web.ex
elixir/lib/tech_tree/: ai.ex  application.ex  learning.ex  mailer.ex  repo.ex
elixir/lib/tech_tree/learning/: course_module.ex  lesson.ex  syllabus.ex
elixir/lib/tech_tree_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
elixir/lib/tech_tree_web/components/: core_components.ex  layouts.ex
elixir/lib/tech_tree_web/components/layouts/: root.html.heex
elixir/lib/tech_tree_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
elixir/lib/tech_tree_web/controllers/page_html/: home.html.heex
elixir/lib/tech_tree_web/live/: start_learning_live.ex
elixir/lib/tech_tree_web/live/course_module_live/: form_component.ex  index.ex  index.html.heex  show.ex  show.html.heex
elixir/lib/tech_tree_web/live/lesson_live/: form_component.ex  index.ex  index.html.heex  show.ex  show.html.heex
elixir/lib/tech_tree_web/live/syllabus_live/: form_component.ex  index.ex  index.html.heex  show.ex  show.html.heex
elixir/priv/repo/: seeds.exs  tech_tree_dev.db
elixir/priv/repo/migrations/: 20250331182810_create_syllabi.exs  20250331182817_create_modules.exs  20250331182827_create_lessons.exs
elixir/test/: test_helper.exs
elixir/test/support/: conn_case.ex  data_case.ex
elixir/test/support/fixtures/: learning_fixtures.ex
elixir/test/tech_tree/: learning_test.exs
elixir/test/tech_tree_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
elixir/test/tech_tree_web/live/: course_module_live_test.exs  lesson_live_test.exs  syllabus_live_test.exs
frontend/: README-FLASK.md  __init__.py  app.py
frontend/auth/: __init__.py  auth.py
frontend/lessons/: lessons.py  system_prompt.txt
frontend/onboarding/: onboarding.py
frontend/static/css/: main.css
frontend/syllabus/: __init__.py  syllabus.py
frontend/templates/: base.html  dashboard.html  lesson.html  login.html  onboarding.html  register.html  syllabus.html
lessons/streamlit_app/: app.py
migrations/: migrate_conversation_history.py  migrate_db_filename.py  migrate_to_sqlite.py
onboarding/ai/: langgraph_app.py
onboarding/streamlit_app/: app.py
streamlit_app/: README.md  __init__.py  app.py
syllabus/ai/: __init__.py  langgraph_app.py
syllabus/streamlit_app/: __init__.py  app.py
techtree-frontend/: README-PROXY.md  package-lock.json  package.json  proxy-server.js  rollup.config.js  start-dev.js
techtree-frontend/src/: App.svelte  main.js
techtree-frontend/src/components/common/: ChatMessage.svelte  Footer.svelte  Header.svelte  LoadingIndicator.svelte  Sidebar.svelte
techtree-frontend/src/routes/: Dashboard.svelte  Lesson.svelte  Login.svelte  Onboarding.svelte  Register.svelte  Syllabus.svelte
techtree-frontend/src/services/: api.js
techtree-frontend/src/stores/: user.js
templates/: lesson.html  login.html  onboarding.html  syllabus.html
