[project]
name = "techtree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "langgraph>=0.3.14",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.1",
    "streamlit>=1.32.0",
    "matplotlib>=3.10.1",
    "tinydb>=4.8.2",
    "fastapi>=0.115.11",
    "bcrypt>=4.3.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "markdown>=3.7",
    "pytest>=8.3.4", # Added test dependency
    "pytest-asyncio>=0.24.0", # Added for async tests
    "python-jose[cryptography]>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1", # Added MyPy for static type checking
    "pre-commit>=3.7.1", # Added pre-commit for automated checks
]

[tool.pylint.messages_control]
disable = [
  "logging-fstring-interpolation",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
